--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ url: "https://adeline0618.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: "adeline0618/adeline0618.github.io"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo:  "/images/logo.png"
+logo: "/images/logo.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs            : true # true, false (default)
+breadcrumbs: true # true, false (default)
 words_per_minute: 200
 comments:
   provider: disqus # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -104,7 +104,7 @@ analytics:
 author:
   name: "Swan"
   avatar: "/images/조수완.jpeg"
-  bio: "효율적으로 성장하기"
+  bio: "**효율적**으로 성장하기"
   location: "Seoul, Korea"
   email: "adeliine.0618@gmail.com"
   links:
