--- a/staticman.yml
+++ b/staticman.yml
@@ -23,7 +23,7 @@ comments:
   #
   # Name of the branch being used. Must match the one sent in the URL of the
   # request.
-  branch: "master"
+  branch: "main"
 
   commitMessage: "New comment by {fields.name}"
 
@@ -67,18 +67,18 @@ comments:
   # via email when someone adds a reply or a new comment. This requires an account
   # with Mailgun, which you can get for free at http://mailgun.com.
   # notifications:
-    # Enable notifications
-    # enabled: true
+  # Enable notifications
+  # enabled: true
 
-    # (!) ENCRYPTED
-    #
-    # Mailgun API key
-    # apiKey: ""
+  # (!) ENCRYPTED
+  #
+  # Mailgun API key
+  # apiKey: ""
 
-    # (!) ENCRYPTED
-    #
-    # Mailgun domain (encrypted)
-    # domain: ""
+  # (!) ENCRYPTED
+  #
+  # Mailgun domain (encrypted)
+  # domain: ""
 
   # (*) REQUIRED
   #
